# varathon

./: Building a Secure and Decentralized Messaging App.pptx  README.md  Vara-Messenger.pptx:Zone.Identifier
messenger-app/contracts/: Cargo.toml
messenger-app/contracts/group-connection/: .binpath  Cargo.toml  build.rs
messenger-app/contracts/group-connection/io/src/: lib.rs
messenger-app/contracts/group-connection/src/: lib.rs
messenger-app/contracts/main-connector/: .binpath  Cargo.toml  build.rs
messenger-app/contracts/main-connector/io/: Cargo.toml
messenger-app/contracts/main-connector/io/src/: lib.rs
messenger-app/contracts/main-connector/src/: lib.rs
messenger-app/contracts/user-contract/: .binpath  Cargo.toml  build.rs
messenger-app/contracts/user-contract/io/: Cargo.toml
messenger-app/contracts/user-contract/io/src/: lib.rs
messenger-app/contracts/user-contract/src/: lib.rs
messenger-app/frontend/: .env  package-lock.json  package.json
messenger-app/frontend/src/: App.tsx  consts.ts  index.tsx
messenger-app/frontend/src/assets/meta/: group_connection.meta.txt  main_connector.meta.txt  user_contract.meta.txt
messenger-app/frontend/src/context/: index.tsx
messenger-app/frontend/src/hooks/: hooks.ts
messenger-app/frontend/src/pages/: index.tsx
messenger-app/frontend/src/pages/login-page/: LoginPage.tsx
messenger-app/frontend/src/pages/main-page/: ChatsForm.tsx  GetChatIds.tsx  GetMessages.tsx  GetPubKey.tsx  GetUsers.tsx  MainLayer.tsx  MessagesForm.tsx  MessagesLoader.tsx  MessagesLoaderForAllUsers.tsx  MessagesUsersForm.tsx  UsersForm.tsx  UsersLoader.tsx
messenger-app/frontend/src/pages/main-page/UI/: AddNewUserForm.tsx  CreateNewChatButton.tsx  SendMessageForm.tsx
messenger-app/frontend/src/pages/main-page/utilts/: ChatButton.tsx  MessageForm.tsx  UserForm.tsx
messenger-app/frontend/src/pages/register-page/: RegisterPage.css  RegisterPage.tsx
messenger-app/frontend/src/utils/crypto-defence/: HMAC.tsx  public-private-key-encryption.tsx  symmetric-key-encryption.tsx
messenger-app/frontend/src/utils/indexedDB/: index.tsx
messenger-app/messenger_contracts/: .gitignore  Cargo.toml
messenger-app/messenger_contracts/group-connection/: .binpath  .metahash  Cargo.toml  build.rs  group_connection.meta.txt
messenger-app/messenger_contracts/group-connection/io/: Cargo.toml
messenger-app/messenger_contracts/group-connection/io/src/: lib.rs
messenger-app/messenger_contracts/group-connection/src/: lib.rs
messenger-app/messenger_contracts/group-connection/state/: Cargo.toml
messenger-app/messenger_contracts/group-connection/state/src/: lib.rs
messenger-app/messenger_contracts/group-connection/tests/: add.rs  send.rs
messenger-app/messenger_contracts/group-connection/tests/utilts/: check.rs  fail.rs  mod.rs
messenger-app/messenger_contracts/main-connector/: .binpath  .metahash  Cargo.toml  build.rs  main_connector.meta.txt
messenger-app/messenger_contracts/main-connector/io/: Cargo.toml
messenger-app/messenger_contracts/main-connector/io/src/: lib.rs
messenger-app/messenger_contracts/main-connector/src/: lib.rs
messenger-app/messenger_contracts/main-connector/state/: Cargo.toml
messenger-app/messenger_contracts/main-connector/state/src/: lib.rs
messenger-app/messenger_contracts/main-connector/tests/: add_user_to_group_connection.rs  create_group_connection.rs
messenger-app/messenger_contracts/main-connector/tests/utilts/: check.rs  fail.rs  mod.rs
messenger-app/messenger_contracts/pair-connection/: .binpath  .metahash  Cargo.toml  build.rs  pair_connection.meta.txt
messenger-app/messenger_contracts/pair-connection/io/: Cargo.toml
messenger-app/messenger_contracts/pair-connection/io/src/: lib.rs
messenger-app/messenger_contracts/pair-connection/src/: lib.rs
messenger-app/messenger_frontend/: .env  package-lock.json  package.json
messenger-app/messenger_frontend/src/: App.tsx  consts.ts
messenger-app/messenger_frontend/src/assets/meta/: meta.txt  meta1.txt
messenger-app/messenger_frontend/src/assets/wasm/: group_connection_state.meta.wasm  main_connector_state.meta.wasm  state.meta.wasm
messenger-app/messenger_frontend/src/context/: index.tsx
messenger-app/messenger_frontend/src/hocs/: index.tsx
messenger-app/messenger_frontend/src/hooks/: api.ts  index.ts
messenger-app/messenger_frontend/src/pages/: Main.tsx  Register.tsx  index.tsx  tmp.tsx  useMetadata.tsx
messenger-app/messenger_frontend/src/pages/home/: Home.tsx  Messenger.tsx
messenger-app/messenger_frontend/src/pages/login-page/: LoginPage.tsx
messenger-app/messenger_frontend/src/pages/main-page/: ChatsForm.tsx  MainLayer.tsx  MessagesForm.tsx  MessagesUsersForm.tsx  UsersForm.tsx
messenger-app/messenger_frontend/src/pages/main-page/UI/: CreateNewChatButton.tsx  SendMessageForm.tsx
messenger-app/messenger_frontend/src/pages/main-page/utilts/: ChatButton.tsx  MessageForm.tsx  UserForm.tsx
messenger-app/messenger_frontend/src/pages/register-page/: RegisterPage.tsx
messenger-app/messenger_frontend/src/utils/crypto-defence/: public-private-key-encryption.tsx  symmetric-key-encryption.tsx
messenger-app/messenger_frontend/src/utils/payloads/: group-connection-payloads.tsx  main-connector-payloads.tsx
