[workspace]
members = [
    "main-connector",
    "group-connection",
]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v0.3.3" }
gmeta = {  git = "https://github.com/gear-tech/gear.git", tag = "v0.3.3"  }
gtest = {  git = "https://github.com/gear-tech/gear", tag = "v0.3.3" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v0.3.3" }

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
hashbrown = "0.14"   

main-connector-io.path = "main-connector/io"
group-connection-io.path = "group-connection/io"