[workspace]
members = [
    "main-connector",
    "user-contract",
]

[workspace.dependencies]
gstd = "1.1.0"
gmeta = "1.1.0"
gear-wasm-builder = "1.1.0"

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
hashbrown = "0.14"   

main-connector-io.path = "main-connector/io"
user-contract-io.path = "user-contract/io"