[workspace]
members = [
    "pair-connection",
    "main-connector",
    "main-connector/state",
    "group-connection",
    "group-connection/state"
]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "946ac47"  }
gtest = {  git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
hashbrown = "0.13"

main-connector-io.path = "main-connector/io"
pair-connection-io.path = "pair-connection/io"
group-connection-io.path = "group-connection/io"