[package]
name = "pair-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true

scale-info.workspace = true
parity-scale-codec.workspace = true

pair-connection-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true

pair-connection-io.workspace = true