[package]
name = "main-connector-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }

main-connector-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true